Wrong height bug fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@ body{
 
 .vh-100{
     height: calc(100vh - 66px);
+    min-height: 700px;
 }
 
 .fill-content{
